--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,45 @@ ul {
   padding-top: 48px;
   padding-bottom: 64px;
 }
+/*---------FOOTER------
+------------------------*/
+.footer {
+  max-width: 11500px;
+  height: 331px;
+  left: 0px;
+  top: opx;
+  background: #202020;
+}
+.footer-top {
+  display: flex;
+}
+.footer-block {
+  margin-right: 79px;
+}
+.footer-block:nth-child(5) {
+  margin-right: 0px;
+}
+.footer-list {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 10px;
+}
+.strip {
+}
+.footer-item {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 130%;
+  color: #ffffff;
+  opacity: 0.8;
+  margin-bottom: 10px;
+}
+.footer-item:nth-last-child(1) {
+  margin-bottom: 0;
+}
+.footer-bottom {
+  display: flex;
+}
