--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,15 @@ h1,
 h2,
 h3 {
   margin: 0;
+  padding: 0;
 }
 a {
   text-decoration: none;
 }
 img {
+  width: 100%;
   display: block;
+  height: auto;
 }
 ul {
   padding: 0;
