--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ h1,
 h2,
 h3 {
   margin: 0;
+  padding: 0;
 }
 
 a {
@@ -40,6 +41,7 @@ ul {
 
 .page-header {
   position: absolute;
+  width: 100%;
 }
 
 .page-header__block {
@@ -79,14 +81,32 @@ ul {
   fill: #ffffff;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 319px) {
   .page-header__contacts {
     display: none;
   }
 }
 
 @media screen and (min-width: 320px) {
+  .page-header__contacts {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 319px) {
   .page-header__button {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 320px) {
+  .page-header__button {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 319px) {
+  .page-nav {
     display: none;
   }
 }
@@ -136,31 +156,30 @@ ul {
 }
 
 .hero__link {
-  display: inline-block;
+  display: block;
+  max-width: 226px;
+  max-height: 48px;
+  padding: 15px 0 15px 0px;
+  border: 1px solid #ffffff;
+  border-radius: 24px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 50px;
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
   text-align: center;
   text-transform: uppercase;
   color: #ffffff;
-  padding: 15px 49px;
-  border: 1px solid #ffffff;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 24px;
 }
 
 .hero__icon {
-  display: inline-block;
+  display: block;
   width: 40px;
   height: 40px;
   border: 1px solid #ffffff;
-}
-
-.hero-block {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  text-align: center;
+  border-radius: 50%;
+  margin-right: auto;
+  margin-left: auto;
 }
 /*# sourceMappingURL=main.css.map */
