--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -32,25 +32,29 @@
   color: $whiteColor;
 }
 .hero__link {
-  display: inline-block;
+  display: block;
+  max-width: 226px;
+  max-height: 48px;
+  padding: 15px 0 15px 0px;
+  border: 1px solid $whiteColor;
+  border-radius: 24px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 50px;
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
   text-align: center;
   text-transform: uppercase;
   color: $whiteColor;
-  padding: 15px 49px;
-  border: 1px solid $whiteColor;
-  box-sizing: border-box;
-  border-radius: 24px;
 }
+
 .hero__icon {
-  display: inline-block;
+  display: block;
   width: 40px;
   height: 40px;
   border: 1px solid $whiteColor;
-}
-.hero-block {
-  display: flex;
-  text-align: center;
+  border-radius: 50%;
+  margin-right: auto;
+  margin-left: auto;
 }
