--- a/css/main.css
+++ b/css/main.css
@@ -27,8 +27,8 @@ ul {
 }
 
 .conteiner {
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 16px;
+  padding-right: 16px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -39,9 +39,34 @@ ul {
   }
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .page-header {
   position: absolute;
   width: 100%;
+}
+
+.page-header__after::after {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: #c4c4c4;
+  opacity: 0.3;
+  border: 1px solid #d9d9de;
 }
 
 .page-header__block {
@@ -181,5 +206,49 @@ ul {
   border-radius: 50%;
   margin-right: auto;
   margin-left: auto;
+}
+
+.categories {
+  padding-top: 16px;
+  padding-bottom: 16px;
+}
+
+.categories__subtitle {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #000000;
+}
+
+.categories__block {
+  padding: 18px 0 18px 20px;
+}
+
+.categories__item {
+  border: 1px solid #d9d9de;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 6px;
+}
+
+.categories__item:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+.directions {
+  padding-top: 44px;
+  padding-bottom: 60px;
+  background-color: rgba(112, 207, 41, 0.07);
+}
+
+.directions__title {
+  font-family: PT Serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 29px;
+  text-align: center;
+  color: #000000;
 }
 /*# sourceMappingURL=main.css.map */
