--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,6 +1,16 @@
 .page-header {
   position: absolute;
   width: 100%;
+  &__after::after {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background: $backgroundhedar;
+    opacity: 0.3;
+    border: 1px solid $backgroundbordercolor;
+  }
 }
 .page-header__block {
   display: flex;
