--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,2 +1,5 @@
 $textColor: #000000;
 $whiteColor: #ffffff;
+$backgroundhedar: #c4c4c4;
+$backgroundbordercolor: #d9d9de;
+$directionscolor: #70cf29;
