--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -3,3 +3,4 @@ $whiteColor: #ffffff;
 $backgroundhedar: #c4c4c4;
 $backgroundbordercolor: #d9d9de;
 $directionscolor: #70cf29;
+$colorPtext: #333333;
