--- a/sass/components/_directions.scss
+++ b/sass/components/_directions.scss
@@ -6,9 +6,25 @@
 .directions__title {
   font-family: PT Serif;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 22px;
   line-height: 29px;
   text-align: center;
   color: $textColor;
+  margin-bottom: 26px;
+}
+.directions__item {
+  text-align: center;
+  &:not(:last-child) {
+    margin-bottom: 26px;
+  }
+}
+.directions__link {
+  margin-bottom: 16px;
+}
+.directions__text {
+  font-size: 16px;
+  line-height: 21px;
+  text-align: center;
+  color: $colorPtext;
 }
