--- a/css/main.css
+++ b/css/main.css
@@ -288,26 +288,14 @@ ul {
   margin-bottom: 7px;
 }
 
-.suggestions__block {
-  position: absolute;
-  padding: 18px 24px 18px 18px;
-  top: 0;
-  left: 0;
-}
-
-.suggestions__imgblock {
-  position: relative;
-}
-
-.suggestions__img {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(black), color-stop(48.44%, white), color-stop(76.04%, white), to(black));
-  background-image: linear-gradient(180deg, black 0%, white 48.44%, white 76.04%, black 100%);
-}
-
 .suggestions__subtitle {
   font-weight: 500;
   font-size: 16px;
   line-height: 21px;
-  color: #ffffff;
+  color: #000000;
+}
+
+.suggestions__price {
+  color: #000000;
 }
 /*# sourceMappingURL=main.css.map */
