--- a/sass/components/_suggestions.scss
+++ b/sass/components/_suggestions.scss
@@ -12,33 +12,13 @@
   max-width: 230px;
   margin-bottom: 7px;
 }
-.suggestions__block {
-  position: absolute;
-  padding: 18px 24px 18px 18px;
-  top: 0;
-  left: 0;
-}
-.suggestions__imgblock {
-  position: relative;
-}
-// .suggestions__item {
 
-// }
-// .suggestions__link {
-
-// }
-.suggestions__img {
-  background-image: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(255, 255, 255, 1) 48.44%,
-    rgba(255, 255, 255, 1) 76.04%,
-    rgba(0, 0, 0, 1) 100%
-  );
-}
 .suggestions__subtitle {
   font-weight: 500;
   font-size: 16px;
   line-height: 21px;
-  color: $whiteColor;
+  color: $textColor;
+}
+.suggestions__price {
+  color: $textColor;
 }
