--- a/sass/components/_suggestions.scss
+++ b/sass/components/_suggestions.scss
@@ -22,3 +22,18 @@
 .suggestions__price {
   color: $textColor;
 }
+.suggestions__img {
+  background: linear-gradient(
+    180deg,
+    #000000 0%,
+    #ffffff 48.44%,
+    #ffffff 76.04%,
+    #000000 100%
+  );
+}
+.suggestions__item {
+  background-image: linear-gradient(
+    rgba(0, 0, 0, 0.8) rgba(255, 255, 255, 0.8) rgba(255, 255, 255, 0.8)
+      rgba(0, 0, 0, 0.8)
+  );
+}
