--- a/css/main.css
+++ b/css/main.css
@@ -299,12 +299,10 @@ ul {
   color: #000000;
 }
 
-.suggestions__img {
+.suggestions__link {
+  max-width: 288px;
   background: -webkit-gradient(linear, left top, left bottom, from(#000000), color-stop(48.44%, #ffffff), color-stop(76.04%, #ffffff), to(#000000));
   background: linear-gradient(180deg, #000000 0%, #ffffff 48.44%, #ffffff 76.04%, #000000 100%);
-}
-
-.suggestions__item {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)));
   background-image: linear-gradient(rgba(0, 0, 0, 0.8) rgba(255, 255, 255, 0.8) rgba(255, 255, 255, 0.8) rgba(0, 0, 0, 0.8));
 }
