--- a/css/main.css
+++ b/css/main.css
@@ -306,4 +306,25 @@ ul {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)));
   background-image: linear-gradient(rgba(0, 0, 0, 0.8) rgba(255, 255, 255, 0.8) rgba(255, 255, 255, 0.8) rgba(0, 0, 0, 0.8));
 }
+
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .suggestions__item-hidden {
+    display: none;
+  }
+}
+
+.map {
+  padding-top: 32px;
+  padding-bottom: 40px;
+}
+
+.map__title {
+  font-family: PT Serif;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 29px;
+  text-align: center;
+  color: #000000;
+  margin-bottom: 19px;
+}
 /*# sourceMappingURL=main.css.map */
