--- a/sass/components/_suggestions.scss
+++ b/sass/components/_suggestions.scss
@@ -42,3 +42,8 @@
       rgba(0, 0, 0, 0.8)
   );
 }
+.suggestions__item-hidden {
+  @media screen and (min-width: 320px) and (max-width: 735px) {
+    display: none;
+  }
+}
