--- a/css/main.css
+++ b/css/main.css
@@ -288,23 +288,38 @@ ul {
   margin-bottom: 7px;
 }
 
+.suggestions__item:not(:last-child) {
+  margin-bottom: 16px;
+}
+
 .suggestions__subtitle {
   font-weight: 500;
   font-size: 16px;
   line-height: 21px;
-  color: #000000;
+  color: #ffffff;
+  margin-bottom: 180px;
 }
 
 .suggestions__price {
-  color: #000000;
+  font-size: 14px;
+  line-height: 18px;
+  color: #ffffff;
 }
 
-.suggestions__link {
-  max-width: 288px;
-  background: -webkit-gradient(linear, left top, left bottom, from(#000000), color-stop(48.44%, #ffffff), color-stop(76.04%, #ffffff), to(#000000));
-  background: linear-gradient(180deg, #000000 0%, #ffffff 48.44%, #ffffff 76.04%, #000000 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)));
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8) rgba(255, 255, 255, 0.8) rgba(255, 255, 255, 0.8) rgba(0, 0, 0, 0.8));
+.suggestions__block {
+  position: relative;
+}
+
+.suggestions__block2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), color-stop(48.44%, rgba(255, 255, 255, 0.1)), color-stop(76.04%, rgba(255, 255, 255, 0.1)), to(rgba(0, 0, 0, 0.7)));
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(255, 255, 255, 0.1) 48.44%, rgba(255, 255, 255, 0.1) 76.04%, rgba(0, 0, 0, 0.7) 100%);
+  border-radius: 6px;
+  padding: 18px 0 0 18px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 735px) {
@@ -323,7 +338,6 @@ ul {
   font-weight: 700;
   font-size: 22px;
   line-height: 29px;
-  text-align: center;
   color: #000000;
   margin-bottom: 19px;
 }
