--- a/sass/components/_suggestions.scss
+++ b/sass/components/_suggestions.scss
@@ -12,35 +12,41 @@
   max-width: 230px;
   margin-bottom: 7px;
 }
-
+.suggestions__item {
+  &:not(:last-child) {
+    margin-bottom: 16px;
+  }
+}
 .suggestions__subtitle {
   font-weight: 500;
   font-size: 16px;
   line-height: 21px;
-  color: $textColor;
+  color: $whiteColor;
+  margin-bottom: 180px;
 }
 .suggestions__price {
-  color: $textColor;
+  font-size: 14px;
+  line-height: 18px;
+  color: $whiteColor;
 }
-// .suggestions__img {
-
-// }
-// .suggestions__item {
-
-// }
-.suggestions__link {
-  max-width: 288px;
+.suggestions__block {
+  position: relative;
+}
+.suggestions__block2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background: linear-gradient(
     180deg,
-    #000000 0%,
-    #ffffff 48.44%,
-    #ffffff 76.04%,
-    #000000 100%
+    rgba(0, 0, 0, 0.7) 0%,
+    rgba(255, 255, 255, 0.1) 48.44%,
+    rgba(255, 255, 255, 0.1) 76.04%,
+    rgba(0, 0, 0, 0.7) 100%
   );
-  background-image: linear-gradient(
-    rgba(0, 0, 0, 0.8) rgba(255, 255, 255, 0.8) rgba(255, 255, 255, 0.8)
-      rgba(0, 0, 0, 0.8)
-  );
+  border-radius: 6px;
+  padding: 18px 0 0 18px;
 }
 .suggestions__item-hidden {
   @media screen and (min-width: 320px) and (max-width: 735px) {
