--- a/css/main.css
+++ b/css/main.css
@@ -297,7 +297,7 @@ ul {
   font-size: 16px;
   line-height: 21px;
   color: #ffffff;
-  margin-bottom: 180px;
+  margin-bottom: 179px;
 }
 
 .suggestions__price {
@@ -319,13 +319,37 @@ ul {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), color-stop(48.44%, rgba(255, 255, 255, 0.1)), color-stop(76.04%, rgba(255, 255, 255, 0.1)), to(rgba(0, 0, 0, 0.7)));
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(255, 255, 255, 0.1) 48.44%, rgba(255, 255, 255, 0.1) 76.04%, rgba(0, 0, 0, 0.7) 100%);
   border-radius: 6px;
-  padding: 18px 0 0 18px;
+  padding: 18px 24px 24px 18px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 735px) {
   .suggestions__item-hidden {
     display: none;
   }
+}
+
+.offer__block {
+  position: relative;
+}
+
+.offer__title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background: rgba(0, 0, 0, 0.5);
+  height: 100%;
+  width: 100%;
+  border-radius: 6px;
+}
+
+.offer__subtitle {
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 29px;
+  text-align: center;
+  color: #ffffff;
 }
 
 .map {
