--- a/sass/components/_suggestions.scss
+++ b/sass/components/_suggestions.scss
@@ -46,7 +46,16 @@
     rgba(0, 0, 0, 0.7) 100%
   );
   border-radius: 6px;
-  padding: 18px 24px 24px 18px;
+  padding: 18px 22px 21px 18px;
+}
+.suggestions__block2--ulan {
+  padding: 17px 52px 32px 18px;
+}
+.suggestions__subtitle--margin {
+  margin-bottom: 165px;
+}
+.suggestions__subtitle--datsan {
+  margin-bottom: 190px;
 }
 .suggestions__item-hidden {
   @media screen and (min-width: 320px) and (max-width: 735px) {
@@ -65,11 +74,15 @@
   height: 100%;
   width: 100%;
   border-radius: 6px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
 }
 .offer__subtitle {
   font-weight: 500;
   font-size: 22px;
-  line-height: 29px;
+  line-height: 1.31;
   text-align: center;
   color: $whiteColor;
+  max-width: 236px;
 }
