--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,3 +4,4 @@ $backgroundhedar: #c4c4c4;
 $backgroundbordercolor: #d9d9de;
 $directionscolor: #70cf29;
 $colorPtext: #333333;
+$linkcolor: #76767a;
