--- a/css/main.css
+++ b/css/main.css
@@ -319,7 +319,19 @@ ul {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), color-stop(48.44%, rgba(255, 255, 255, 0.1)), color-stop(76.04%, rgba(255, 255, 255, 0.1)), to(rgba(0, 0, 0, 0.7)));
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.7) 0%, rgba(255, 255, 255, 0.1) 48.44%, rgba(255, 255, 255, 0.1) 76.04%, rgba(0, 0, 0, 0.7) 100%);
   border-radius: 6px;
-  padding: 18px 24px 24px 18px;
+  padding: 18px 22px 21px 18px;
+}
+
+.suggestions__block2--ulan {
+  padding: 17px 52px 32px 18px;
+}
+
+.suggestions__subtitle--margin {
+  margin-bottom: 165px;
+}
+
+.suggestions__subtitle--datsan {
+  margin-bottom: 190px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 735px) {
@@ -342,14 +354,24 @@ ul {
   height: 100%;
   width: 100%;
   border-radius: 6px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .offer__subtitle {
   font-weight: 500;
   font-size: 22px;
-  line-height: 29px;
+  line-height: 1.31;
   text-align: center;
   color: #ffffff;
+  max-width: 236px;
 }
 
 .map {
@@ -364,5 +386,45 @@ ul {
   line-height: 29px;
   color: #000000;
   margin-bottom: 19px;
+}
+
+.about {
+  padding-bottom: 32px;
+}
+
+.about__title {
+  font-family: PT Serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.31;
+  color: #000000;
+  margin-bottom: 20px;
+}
+
+.about__text {
+  font-size: 16px;
+  line-height: 1.31;
+  color: #333333;
+  max-width: 288px;
+  margin-bottom: 15px;
+}
+
+.about_btn {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: transparent;
+  font-size: 14px;
+  line-height: 1.14;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #76767a;
+  margin-bottom: 36px;
+}
+
+.about__video {
+  width: 288px;
+  height: 171px;
 }
 /*# sourceMappingURL=main.css.map */
