--- a/css/main.css
+++ b/css/main.css
@@ -427,4 +427,20 @@ ul {
   width: 288px;
   height: 171px;
 }
+
+.gallery {
+  padding-top: 26px;
+  padding-bottom: 37px;
+  background: rgba(63, 169, 245, 0.07);
+}
+
+.gallery__img-item--hidden {
+  display: none;
+}
+
+@media screen and (min-width: 320px) {
+  .gallery__img-item--hidden {
+    display: none;
+  }
+}
 /*# sourceMappingURL=main.css.map */
