--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -27,6 +27,7 @@
   text-decoration-line: underline;
   color: $linkcolor;
   margin-bottom: 36px;
+  cursor: pointer;
 }
 .about__video {
   width: 288px;
