--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -50,7 +50,9 @@
 }
 
 .hero__icon {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 40px;
   height: 40px;
   border: 1px solid $whiteColor;
