--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -1,6 +1,6 @@
 .gallery {
   padding-top: 26px;
-  padding-bottom: 37px;
+  padding-bottom: 88px;
   background: rgba(63, 169, 245, 0.07);
 }
 .gallery__img-item--hidden {
@@ -8,4 +8,55 @@
   @media screen and (min-width: 320px) {
     display: none;
   }
+}
+.gallery__title {
+  font-family: PT Serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.31;
+  color: $textColor;
+}
+.gallery__block {
+  display: flex;
+  position: relative;
+  align-items: center;
+  margin-bottom: 25px;
+}
+.gallery__link-block {
+  position: absolute;
+  top: 307px;
+  right: 93px;
+}
+.gallery__link {
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  text-decoration-line: underline;
+  color: $colorLinkblu;
+}
+.gallery__btn-list {
+  display: flex;
+  margin-left: auto;
+}
+.gallery__btn-item {
+  &:not(:last-child) {
+    margin-right: 16px;
+  }
+}
+.gallery__button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border: 1px solid #0061d9;
+  border-radius: 22px;
+  padding: 0;
+  background: transparent;
+  cursor: pointer;
+}
+.gallery__icon {
+  background: transparent;
+  fill: rgba(0, 97, 217, 1);
 }
