--- a/sass/components/_invitation.scss
+++ b/sass/components/_invitation.scss
@@ -33,6 +33,7 @@
   content: "";
   bottom: 0;
   right: 16px;
+  left: 16px;
   width: 288px;
   background: $backgroundhedar;
   border: 1px solid $backgroundbordercolor;
