--- a/sass/components/_invitation.scss
+++ b/sass/components/_invitation.scss
@@ -32,9 +32,8 @@
   position: absolute;
   content: "";
   bottom: 0;
-  right: 16px;
-  left: 16px;
-  width: 288px;
+  left: 0;
+  width: 320px;
   background: $backgroundhedar;
   border: 1px solid $backgroundbordercolor;
 }
