--- a/css/main.css
+++ b/css/main.css
@@ -559,14 +559,16 @@ ul {
   margin-bottom: 15px;
 }
 
-.invitation::after {
-  position: absolute;
-  content: "";
-  bottom: 0;
-  left: 0;
-  width: 320px;
-  background: #c4c4c4;
-  border: 1px solid #d9d9de;
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .invitation::after {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 16px;
+    width: 288px;
+    background: #c4c4c4;
+    border: 1px solid #d9d9de;
+  }
 }
 
 .features {
@@ -613,27 +615,89 @@ ul {
       flex-basis: calc((100%-40px) / 2);
 }
 
-.features__text {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.28;
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .features__text {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.28;
+    color: #000000;
+    max-width: 138px;
+  }
+  .features__text--age {
+    max-width: 92px;
+  }
+  .features__text--hotel {
+    max-width: 75px;
+  }
+  .features__text--tour {
+    max-width: 73px;
+  }
+  .features__text--metr {
+    max-width: 138px;
+  }
+}
+
+.form {
+  padding-top: 29px;
+  padding-bottom: 44px;
+  background: #f5f5f7;
+}
+
+.form__title {
+  font-family: PT Serif;
+  font-style: normal;
+  margin-left: auto;
+  margin-right: auto;
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 1.31;
+  text-align: center;
   color: #000000;
-  max-width: 138px;
 }
 
-.features__text--age {
-  max-width: 92px;
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .form__title {
+    max-width: 248px;
+    margin-bottom: 14px;
+  }
 }
 
-.features__text--hotel {
-  max-width: 75px;
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .form__input {
+    width: 100%;
+    height: 44px;
+    background: #ffffff;
+    border: 1px solid #d9d9de;
+    outline: none;
+    margin-bottom: 16px;
+  }
 }
 
-.features__text--tour {
-  max-width: 73px;
+.form__input::-webkit-input-placeholder {
+  font-size: 16px;
+  line-height: 1.31;
+  color: #76767a;
+  padding: 11px 0 12px 14px;
 }
 
-.features__text--metr {
-  max-width: 138px;
+.form__input:-ms-input-placeholder {
+  font-size: 16px;
+  line-height: 1.31;
+  color: #76767a;
+  padding: 11px 0 12px 14px;
+}
+
+.form__input::-ms-input-placeholder {
+  font-size: 16px;
+  line-height: 1.31;
+  color: #76767a;
+  padding: 11px 0 12px 14px;
+}
+
+.form__input::placeholder {
+  font-size: 16px;
+  line-height: 1.31;
+  color: #76767a;
+  padding: 11px 0 12px 14px;
 }
 /*# sourceMappingURL=main.css.map */
