--- a/sass/components/_invitation.scss
+++ b/sass/components/_invitation.scss
@@ -28,12 +28,14 @@
   color: $colorPtext;
   margin-bottom: 15px;
 }
-.invitation::after {
-  position: absolute;
-  content: "";
-  bottom: 0;
-  left: 0;
-  width: 320px;
-  background: $backgroundhedar;
-  border: 1px solid $backgroundbordercolor;
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .invitation::after {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 16px;
+    width: 288px;
+    background: $backgroundhedar;
+    border: 1px solid $backgroundbordercolor;
+  }
 }
