--- a/css/main.css
+++ b/css/main.css
@@ -600,19 +600,23 @@ ul {
   display: flex;
 }
 
-.features__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-top: -40px;
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .features__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: -40px;
+  }
 }
 
-.features__item {
-  margin-top: 40px;
-  -ms-flex-preferred-size: calc((100%-40px) / 2);
-      flex-basis: calc((100%-40px) / 2);
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .features__item {
+    margin-top: 40px;
+    -ms-flex-preferred-size: calc((100%-40px) / 2);
+        flex-basis: calc((100%-40px) / 2);
+  }
 }
 
 @media screen and (min-width: 320px) and (max-width: 735px) {
