--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -23,13 +23,17 @@
   display: flex;
 }
 .features__list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-top: -40px;
+  @media screen and (min-width: 320px) and (max-width: 735px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: -40px;
+  }
 }
 .features__item {
-  margin-top: 40px;
-  flex-basis: calc((100%-40px) / 2);
+  @media screen and (min-width: 320px) and (max-width: 735px) {
+    margin-top: 40px;
+    flex-basis: calc((100%-40px) / 2);
+  }
 }
 .features__text {
   @media screen and (min-width: 320px) and (max-width: 735px) {
