--- a/css/main.css
+++ b/css/main.css
@@ -564,8 +564,8 @@ ul {
     position: absolute;
     content: "";
     bottom: 0;
-    left: 16px;
-    width: 288px;
+    left: 0;
+    width: 100%;
     background: #c4c4c4;
     border: 1px solid #d9d9de;
   }
@@ -703,5 +703,60 @@ ul {
   line-height: 1.31;
   color: #76767a;
   padding: 11px 0 12px 14px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .form__label {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 6px;
+    font-size: 15px;
+    line-height: 1.93;
+    color: #76767a;
+  }
+  .form__date {
+    width: 136px;
+    height: 44px;
+    outline: none;
+    border: 1px solid #d9d9de;
+    color: #76767a;
+    padding: 11px 0 11px 1px;
+  }
+  .form__textarea {
+    width: 100%;
+    resize: none;
+    padding: 11px 14px;
+    outline: none;
+    border: 1px solid #d9d9de;
+    margin-bottom: 15px;
+  }
+}
+
+.form__div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 16px;
+}
+
+.form__div2 {
+  margin-left: auto;
+}
+
+.form__chek {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  top: 0;
+}
+
+.form__box {
+  position: absolute;
+  border: 2px solid #76767a;
+  border-radius: 2px;
+  width: 26px;
+  height: 26px;
 }
 /*# sourceMappingURL=main.css.map */
