--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -35,3 +35,47 @@
     padding: 11px 0 12px 14px;
   }
 }
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .form__label {
+    display: flex;
+    margin-bottom: 6px;
+    font-size: 15px;
+    line-height: 1.93;
+    color: $linkcolor;
+  }
+  .form__date {
+    width: 136px;
+    height: 44px;
+    outline: none;
+    border: 1px solid $backgroundbordercolor;
+    color: $linkcolor;
+    padding: 11px 0 11px 1px;
+  }
+  .form__textarea {
+    width: 100%;
+    resize: none;
+    padding: 11px 14px;
+    outline: none;
+    border: 1px solid $backgroundbordercolor;
+    margin-bottom: 15px;
+  }
+}
+.form__div {
+  display: flex;
+  margin-bottom: 16px;
+}
+.form__div2 {
+  margin-left: auto;
+}
+.form__chek {
+  display: flex;
+  position: relative;
+  top: 0;
+}
+.form__box {
+  position: absolute;
+  border: 2px solid $linkcolor;
+  border-radius: 2px;
+  width: 26px;
+  height: 26px;
+}
