--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -57,7 +57,7 @@
     padding: 11px 14px;
     outline: none;
     border: 1px solid $backgroundbordercolor;
-    margin-bottom: 15px;
+    margin-bottom: 21px;
   }
 }
 .form__div {
@@ -70,7 +70,8 @@
 .form__chek {
   display: flex;
   position: relative;
-  top: 0;
+  align-items: baseline;
+  margin-bottom: 27px;
 }
 .form__box {
   position: absolute;
@@ -78,4 +79,43 @@
   border-radius: 2px;
   width: 26px;
   height: 26px;
+  left: 0;
+  top: 5px;
+}
+.form__chekhidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+  text-align: center;
+}
+.form__chekhidden:checked + .form__box {
+  background-color: $linkcolor;
+  border-color: $linkcolor;
+  background-size: contain;
+  background-origin: border-box;
+  background-image: url(../../images/checkmark_icon_125020.svg);
+}
+.Form__text {
+  font-size: 14px;
+  line-height: 1.28;
+  text-decoration-line: underline;
+  color: $linkcolor;
+  margin-left: 58px;
+}
+.form__btn {
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  color: $whiteColor;
+  width: 288px;
+  border: none;
+  padding: 15px 60px;
+  background: $colorLinkblu;
+  border-radius: 25px;
+  cursor: pointer;
 }
