--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -98,14 +98,14 @@
   border-color: $linkcolor;
   background-size: contain;
   background-origin: border-box;
-  background-image: url(../../images/checkmark_icon_125020.svg);
+  background-image: url(../../images/symbol-defs.svg#iconcheckmark_icon_125020);
 }
 .Form__text {
   font-size: 14px;
   line-height: 1.28;
   text-decoration-line: underline;
   color: $linkcolor;
-  margin-left: 58px;
+  padding-left: 58px;
 }
 .form__btn {
   font-size: 16px;
