--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -98,7 +98,7 @@
   border-color: $whiteColor;
   background-size: contain;
   background-origin: border-box;
-  background-image: url(../../images/icons8-галочка.svg);
+  background-image: url(../../images/icon-check.svg);
 }
 .Form__text {
   font-size: 14px;
