--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   font-family: "Roboto", sans-serif;
 }
@@ -783,7 +782,7 @@ ul {
   border-color: #ffffff;
   background-size: contain;
   background-origin: border-box;
-  background-image: url(../../images/icons8-галочка.svg);
+  background-image: url(../../images/icon-check.svg);
 }
 
 .Form__text {
