--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -94,7 +94,7 @@
   text-align: center;
 }
 .form__chekhidden:checked + .form__box {
-  background-color: $whiteColor;
+  background-color: $colorLinkblu;
   border-color: $whiteColor;
   background-size: contain;
   background-origin: border-box;
