--- a/css/main.css
+++ b/css/main.css
@@ -778,7 +778,7 @@ ul {
 }
 
 .form__chekhidden:checked + .form__box {
-  background-color: #ffffff;
+  background-color: #0050b2;
   border-color: #ffffff;
   background-size: contain;
   background-origin: border-box;
