--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -54,5 +54,14 @@
   display: none;
 }
 .about__chekbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+  text-align: center;
   appearance: none;
 }
