--- a/css/main.css
+++ b/css/main.css
@@ -604,8 +604,8 @@ ul {
     position: absolute;
     content: "";
     bottom: 0;
-    left: 0;
-    width: 100%;
+    left: 16px;
+    width: 320px;
     background: #c4c4c4;
     border: 1px solid #d9d9de;
   }
