--- a/sass/components/_invitation.scss
+++ b/sass/components/_invitation.scss
@@ -33,8 +33,8 @@
     position: absolute;
     content: "";
     bottom: 0;
-    left: 0;
-    width: 100%;
+    left: 16px;
+    width: 320px;
     background: $backgroundhedar;
     border: 1px solid $backgroundbordercolor;
   }
