--- a/css/main.css
+++ b/css/main.css
@@ -604,7 +604,7 @@ ul {
     position: absolute;
     content: "";
     bottom: 0;
-    left: 16px;
+    left: 0;
     width: 320px;
     background: #c4c4c4;
     border: 1px solid #d9d9de;
@@ -845,5 +845,107 @@ ul {
   background: #0050b2;
   border-radius: 25px;
   cursor: pointer;
+}
+
+@media screen and (min-width: 320px) and (max-width: 735px) {
+  .footer-top {
+    display: none;
+  }
+  .footer-bottom {
+    display: none;
+  }
+  .footer {
+    padding-bottom: 29px;
+    background: #202020;
+  }
+}
+
+.menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  padding-top: 16px;
+  padding-bottom: 17px;
+}
+
+.menu::after {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 0;
+  width: 300px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.menu__text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28;
+  color: #ffffff;
+  margin-top: 21px;
+  margin-bottom: 7px;
+}
+
+.menu__small {
+  font-size: 14px;
+  line-height: 1.28;
+  color: rgba(255, 255, 255, 0.8);
+  margin-bottom: 29px;
+  display: block;
+}
+
+.menu__link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding-top: 4px;
+}
+
+.menu__btn {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  margin-right: 20px;
+}
+
+.menu__icon {
+  fill: #ffffff;
+}
+
+.menu__link2 {
+  display: block;
+  font-size: 12px;
+  line-height: 1.33;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #ffffff;
+  margin-bottom: 15px;
+}
+
+.menu__design {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 12px;
+  line-height: 1.33;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.menu__img {
+  margin-left: 14px;
+  fill: rgba(255, 255, 255, 0.8);
 }
 /*# sourceMappingURL=main.css.map */
