--- a/sass/components/_invitation.scss
+++ b/sass/components/_invitation.scss
@@ -33,7 +33,7 @@
     position: absolute;
     content: "";
     bottom: 0;
-    left: 16px;
+    left: 0;
     width: 320px;
     background: $backgroundhedar;
     border: 1px solid $backgroundbordercolor;
