--- a/css/main.css
+++ b/css/main.css
@@ -803,6 +803,7 @@ ul {
   height: 26px;
   left: 0;
   top: 5px;
+  display: inline-block;
 }
 
 .form__chekhidden {
@@ -831,7 +832,15 @@ ul {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
   color: #76767a;
-  padding-left: 58px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .form__btn {
@@ -845,6 +854,10 @@ ul {
   background: #0050b2;
   border-radius: 25px;
   cursor: pointer;
+}
+
+.form__span {
+  margin-left: 58px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 735px) {
