--- a/css/main.css
+++ b/css/main.css
@@ -599,16 +599,13 @@ ul {
   margin-bottom: 15px;
 }
 
-@media screen and (min-width: 320px) and (max-width: 735px) {
-  .invitation::after {
-    position: absolute;
-    content: "";
-    bottom: 0;
-    left: 0;
-    width: 320px;
-    background: #c4c4c4;
-    border: 1px solid #d9d9de;
-  }
+.affter::after {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  width: 288px;
+  background: #c4c4c4;
+  border: 1px solid #d9d9de;
 }
 
 .features {
@@ -821,8 +818,9 @@ ul {
 .form__chekhidden:checked ~ .form__box {
   background-color: #0050b2;
   border-color: #ffffff;
-  background-size: contain;
+  background-size: cover;
   background-origin: border-box;
+  background-repeat: no-repeat;
   background-image: url(../../images/icon-check.svg);
 }
 
