--- a/css/main.css
+++ b/css/main.css
@@ -820,13 +820,13 @@ ul {
   text-align: center;
 }
 
-.form__chekhidden:checked ~ .form__box {
-  background-color: #0050b2;
-  border-color: #ffffff;
-  background-size: cover;
+.form__chekhidden:checked + .form__box {
+  background-color: #0986ac;
+  border-color: #0986ac;
+  background-size: contain;
   background-origin: border-box;
   background-repeat: no-repeat;
-  background-image: url(../../images/icon-check.svg);
+  background-image: url(../images/icon-check.svg);
 }
 
 .Form__text {
