--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -94,13 +94,13 @@
   clip: rect(0 0 0 0);
   text-align: center;
 }
-.form__chekhidden:checked ~ .form__box {
-  background-color: $colorLinkblu;
-  border-color: $whiteColor;
-  background-size: cover;
+.form__chekhidden:checked + .form__box {
+  background-color: $colorchekbox;
+  border-color: $colorchekbox;
+  background-size: contain;
   background-origin: border-box;
   background-repeat: no-repeat;
-  background-image: url(../../images/icon-check.svg);
+  background-image: url(../images/icon-check.svg);
 }
 .Form__text {
   font-size: 14px;
