--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,4 @@
 @import "./components/features";
 @import "./components/form";
 @import "./components/footer";
+@import "./components/moblie-menu";
