--- a/sass/components/_moblie-menu.scss
+++ b/sass/components/_moblie-menu.scss
@@ -34,7 +34,7 @@
 .mobile__link {
   font-size: 16px;
   line-height: 1.31;
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255, 0.7);
   margin-bottom: 5px;
 }
 .mobile__icon {
@@ -42,4 +42,16 @@
 }
 .mobile__list {
   margin-bottom: 5px;
+}
+.mobile__text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28;
+  color: $whiteColor;
+}
+.mobile__text-address {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.28;
+  color: rgba(255, 255, 255, 0.7);
 }
