--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,4 @@
 @import "./components/form";
 @import "./components/footer";
 @import "./components/moblie-menu";
+@import "./components/head-mobile";
