--- a/sass/components/_head-mobile.scss
+++ b/sass/components/_head-mobile.scss
@@ -57,3 +57,10 @@
   width: 186px;
   background: rgb(1, 48, 1);
 }
+.head-mobile__link-phoneMail {
+  display: flex;
+  align-items: center;
+}
+.head-mobile__svg {
+  margin-right: 15px;
+}
