--- a/css/main.css
+++ b/css/main.css
@@ -1043,7 +1043,7 @@ ul {
   height: 100vh;
   padding: 30px 20px 20px 20px;
   z-index: 1000;
-  background: #42f842;
+  background: #aef087;
   -webkit-transform: translateY(-100%);
           transform: translateY(-100%);
   -webkit-transition: -webkit-transform 250ms ease-in-out;
