--- a/sass/components/_head-mobile.scss
+++ b/sass/components/_head-mobile.scss
@@ -6,7 +6,7 @@
   height: 100vh;
   padding: 30px 20px 20px 20px;
   z-index: 1000;
-  background: rgb(126, 130, 153);
+  background: #c0c1c5;
   transform: translateY(-100%);
   transition: transform 250ms ease-in-out;
 }
